# xisf

./: .gitignore  README.md  pyproject.toml  setup.cfg  xisf.py
example/: fits2xisf.py  xisf2fits.py  xisflz4.py  xisfmeta.py
src/: xisf.py
src/xisf/: __init__.py  xisf.py
