[metadata]
name = xisf
version = attr: xisf.__version__
author = Sergio Díaz
author_email = sergio.diaz.ruiz@gmail.com
description = Encoder/Decoder for XISF (Extensible Image Serialization Format)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sergio-dr/xisf
project_urls =
    Bug Tracker = https://github.com/sergio-dr/xisf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src